print ¶ of text big if no images...

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ P    X          F                K       J              F      J     Y      5   
               {{/slideshowimages}}
 
               <article class="row">
-                <p class="col-xs-12 col-md-9 student-statement">{{ websitelongstatementupto500words }}</p>
+                <p class="col-xs-12 col-md-9 student-statement {{^slideshowimages}}lead{{/slideshowimages}}">{{ websitelongstatementupto500words }}</p>
 
                 <div class="clearfix visible-sm"></div>
                 
