--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ P    X          F                K       J              F      J     Y      5   
                       <p class="exhibitionlocation">{{exhibitionlocation}}</p>
                       <p class="show-date showdate">{{showdate}}</p>
                       <p class="id" style="display:none">{{id}}</p>
-<!--                       <p class="studentid">{{_id}}</p> -->
+                      <p class="studentid">{{_id}}</p>
                     </div>
                   </div>
                 </li>
