--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@ P    X          F                K       J              F      J     Y      5   
                 <li>
                   <span>Show Date</span>
                   <ul class="" id="showdate-filter">
-                    <li><a href="#" data-showdate="1/24/2014">Jan 24</a></li>
-                    <li><a href="#" data-showdate="1/31/2014">Jan 31</a></li>
-                    <li><a href="#" data-showdate="3/28/2014">Mar 28</a></li>
-                    <li><a href="#" data-showdate="4/11/2014">Apr 11</a></li>
-                    <li><a href="#" data-showdate="4/23/2014">Apr 23</a></li>
-                    <li><a href="#" data-showdate="4/25/2014">Apr 25</a></li>
-                    <li><a href="#" data-showdate="5/3/2014">May 03</a></li>
+                    <li><a href="#" data-showdate="Jan 24-Feb 16, 2014">Jan 24-Feb 16, 2014</a></li>
+                    <li><a href="#" data-showdate="Feb 01-May 09, 2014">Feb 01-May 09, 2014</a></li>
+                    <li><a href="#" data-showdate="Jan 31-Feb 16, 2014">Jan 31-Feb 16, 2014</a></li>
+                    <li><a href="#" data-showdate="Mar 28-Apr 06, 2014">Mar 28-Apr 06, 2014</a></li>
+                    <li><a href="#" data-showdate="Apr 11-Apr 20, 2014">Apr 11-Apr 20, 2014</a></li>
+                    <li><a href="#" data-showdate="Apr 23-May 04, 2014">Apr 23-May 04, 2014</a></li>
+                    <li><a href="#" data-showdate="Apr 25-May 04, 2014">Apr 25-May 04, 2014</a></li>
+                    <li><a href="#" data-showdate="May 03, 2014">May 03, 2014</a></li>
                   </ul>
                 </li>
               </ul>
@@ -214,13 +215,14 @@ P    X          F                K       J              F      J     Y      5   
                         <a href="#">Show Date </a><span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" id="showdate-filter">
-                      <li><a href="#" data-showdate="1/24/2014">Jan 24</a></li>
-                      <li><a href="#" data-showdate="1/31/2014">Jan 31</a></li>
-                      <li><a href="#" data-showdate="3/28/2014">Mar 28</a></li>
-                      <li><a href="#" data-showdate="4/11/2014">Apr 11</a></li>
-                      <li><a href="#" data-showdate="4/23/2014">Apr 23</a></li>
-                      <li><a href="#" data-showdate="4/25/2014">Apr 25</a></li>
-                      <li><a href="#" data-showdate="5/3/2014">May 03</a></li>
+                        <li><a href="#" data-showdate="Jan 24-Feb 16, 2014">Jan 24-Feb 16, 2014</a></li>
+                        <li><a href="#" data-showdate="Feb 01-May 09, 2014">Feb 01-May 09, 2014</a></li>
+                        <li><a href="#" data-showdate="Jan 31-Feb 16, 2014">Jan 31-Feb 16, 2014</a></li>
+                        <li><a href="#" data-showdate="Mar 28-Apr 06, 2014">Mar 28-Apr 06, 2014</a></li>
+                        <li><a href="#" data-showdate="Apr 11-Apr 20, 2014">Apr 11-Apr 20, 2014</a></li>
+                        <li><a href="#" data-showdate="Apr 23-May 04, 2014">Apr 23-May 04, 2014</a></li>
+                        <li><a href="#" data-showdate="Apr 25-May 04, 2014">Apr 25-May 04, 2014</a></li>
+                        <li><a href="#" data-showdate="May 03, 2014">May 03, 2014</a></li>
                       </ul>
                     </div>
                   </li>
