Add off campus gallery filter

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ P    X          F                K       J              F      J     Y      5   
                     <li><a href="#" data-gallery="Meyerhoff">Meyerhoff Gallery</a></li>
                     <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
                     <li><a href="#" data-gallery="Riggs">Studio Center Galleries</a></li>
-                    <li><a href="#" >Off Campus</a></li> <!-- this needs to be the curatorial practice students, can it somehow use the program data from above? -->
+                    <li><a href="#" data-gallery="Off Campus">Off Campus</a></li> <!-- this needs to be the curatorial practice students, can it somehow use the program data from above? -->
                   </ul>
                 </li>
                 <li>
@@ -205,7 +205,7 @@ P    X          F                K       J              F      J     Y      5   
                         <li><a href="#" data-gallery="Meyerhoff">Meyerhoff Gallery</a></li>
                         <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
                         <li><a href="#" data-gallery="Riggs,Leidy">Studio Center Galleries</a></li>
-                        <li><a href="#" >Off Campus</a></li> <!-- this needs to be the curatorial practice students, can it somehow use the program data from above? -->
+                        <li><a href="#" data-gallery="Off Campus">Off Campus</a></li> <!-- this needs to be the curatorial practice students, can it somehow use the program data from above? -->
                       </ul>
                     </div>
                   </li>
