Make schedule dates clickable

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ P    X          F                K       J              F      J     Y      5   
                         <li><a href="#" data-gallery="Meyerhoff">Meyerhoff Gallery</a></li>
                         <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
                         <li><a href="#" data-gallery="Riggs,Leidy">Studio Center Galleries</a></li>
-                        <li><a href="#" data-gallery="Off Campus">Off Campus</a></li> <!-- this needs to be the curatorial practice students, can it somehow use the program data from above? -->
+                        <li><a href="#" data-gallery="Off Campus">Off Campus</a></li>
                       </ul>
                     </div>
                   </li>
@@ -246,7 +246,7 @@ P    X          F                K       J              F      J     Y      5   
             <h1>Schedule of Events</h1>
             <ul>
               <!-- teaching ma -->
-              <li class="row showtime">
+              <li class="row showtime" data-showdate="Jan 24-Feb 16, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jan 24</date>&ndash;<date>Feb 16, 2014</date></h3>
                   <p class="small red">Reception: January 24, 5-7pm</p>
@@ -256,7 +256,7 @@ P    X          F                K       J              F      J     Y      5   
                 </div>
               </li>
               <!-- post-bacc fine art -->
-              <li class="row showtime">
+              <li class="row showtime" data-showdate="Jan 31-Feb 16, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jan 31</date>&ndash;<date>Feb 16, 2014</date></h3>
                   <p class="small red">Reception: January 31, 5-7pm</p>
@@ -266,7 +266,7 @@ P    X          F                K       J              F      J     Y      5   
                 </div>
               </li>
               <!-- curatorial practice -->
-              <li class="row showtime">
+              <li class="row showtime" data-showdate="Feb 01-May 09, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Feb 01</date>&ndash;<date>May 09, 2014</date></h3>
                   <p class="small red">Receptions throughout the semester</p> 
@@ -278,7 +278,7 @@ P    X          F                K       J              F      J     Y      5   
               </li>
 
               <!-- -->
-              <li class="row showtime">
+              <li class="row showtime" data-showdate="Mar 28-Apr 06, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Mar 28</date>&ndash;<date>Apr 06, 2014</date></h3>
                   <p class="small red">Reception: March 28, 5&ndash;8pm</p>
@@ -291,7 +291,7 @@ P    X          F                K       J              F      J     Y      5   
               </li>
 
               <!-- -->
-              <li class="row showtime">
+              <li class="row showtime" data-showdate="Apr 11-Apr 20, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 11</date>&ndash;<date>Apr 20, 2014</date></h3>
                   <p class="small red">Reception: April 11, 5&ndash;8pm</p>
@@ -304,7 +304,7 @@ P    X          F                K       J              F      J     Y      5   
               </li>
 
               <!-- -->
-              <li class="row showtime">
+              <li class="row showtime" data-showdate="Apr 23-May 04, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 23</date>&ndash;<date>May 04, 2014</date></h3>
                   <p class="small red">Reception: May 02, 5&ndash;8pm</p>
@@ -315,7 +315,7 @@ P    X          F                K       J              F      J     Y      5   
               </li>
 
               <!-- -->
-              <li class="row showtime">
+              <li class="row showtime" data-showdate="Apr 25-May 04, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 25</date>&ndash;<date>May 04, 2014</date></h3>
                   <p class="small red">Reception: May 02, 5&ndash;8pm</p>
@@ -327,7 +327,7 @@ P    X          F                K       J              F      J     Y      5   
               </li>
 
               <!-- -->
-              <li class="row showtime">
+              <li class="row showtime" data-showdate="May 03, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>May 03, 2014</date></h3>
                   <p class="small red">Symposium: 5&ndash;7pm</a></p>
@@ -339,7 +339,7 @@ P    X          F                K       J              F      J     Y      5   
               </li>
 
               <!-- -->
-              <li class="row showtime">
+              <li class="row showtime" data-showdate="Jun 28-Jul 12, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jun 28</date>&ndash;<date>Jul 12, 2014</date></h3>
                   <p class="small red">Reception: June 28, 6&ndash;8p</p>
@@ -350,7 +350,7 @@ P    X          F                K       J              F      J     Y      5   
               </li>
 
               <!-- -->
-              <li class="row showtime">
+              <li class="row showtime" data-showdate="Jul 27-Aug 01, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jul 27</date>&ndash;<date>Aug 01, 2014</date></h3>
                   <p class="small red">Reception: to be determined</p>
