adding space for caption stuff...

--- a/index.html
+++ b/index.html
@@ -503,6 +503,18 @@ P    X          F                K       J              F      J     Y      5   
                     {{#slideshow}}
                     <div class="item">
                       <img src="http://mfa.cape.io/{{.}}">
+                      
+                      <!-- THIS IS WHERE THE CAPTIONS SHOULD PRINT OUT IF THERE ARE ANY! -->
+                      <div class="carousel-caption">
+                        {{#title}<h4>{{title}}</h4>{{/title}}
+                        {{#year}<p class="year">{{year}}</p>{{/year}}
+                        {{#medium}<p class="medium">{{medium}}</p>{{/medium}}
+                        {{#size}<p class="size">{{size}}</p>{{/size}}
+                        {{#caption}<p class="caption">{{.}}</p>{{/year}}
+                        {{#credit}<p class="credit">{{credit}}</p>{{/credit}}
+                      </div>
+                      <!-- /END THIS IS WHERE THE CAPTIONS SHOULD PRINT OUT IF THERE ARE ANY! -->
+                      
                     </div>
                     {{/slideshow}}
                   </div>
