--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ P    X          F                K       J              F      J     Y      5   
                   <h4>{{program}}</h4>
                   <ul class="program-peers">
                     {{#peers}}
-                    <li><a>{{ name }} <span id="id-{{_id}}" style="display:none" class="id">{{_id}}</span></a></li>
+                    <li><a>{{ firstname }} {{ lastname }} <span id="id-{{_id}}" style="display:none" class="id">{{_id}}</span></a></li>
                     {{/peers}}
                   </ul>
                 </aside>
