does this vertically center images in the slideshow?

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ P    X          F                K       J              F      J     Y      5   
                   <span>Program</span>
                   <ul class="" id="program-filter">
                     <li><a href="#" data-program="Community Arts">Community Arts</a></li>
-                    <li><a href="#" data-program="Critical Studies">Critical Studies</a></li>
+                    <li><a href="criticalstudies.html" >Critical Studies</a></li>
                     <li><a href="#" data-program="Curatorial">Curatorial</a></li>
                     <li><a href="#" data-program="Graphic Design">Graphic Design</a></li>
                     <li><a href="#" data-program="Hoffberger">Hoffberger</a></li>
@@ -178,7 +178,7 @@ P    X          F                K       J              F      J     Y      5   
                       </button>
                       <ul class="dropdown-menu" id="program-filter">
                         <li><a href="#" data-program="Community Arts">Community Arts</a></li>
-                        <li><a href="#" data-program="Critical Studies">Critical Studies</a></li>
+                        <li><a href="criticalstudies.html">Critical Studies</a></li>
                         <li><a href="#" data-program="Curatorial">Curatorial</a></li>
                         <li><a href="#" data-program="Graphic Design">Graphic Design</a></li>
                         <li><a href="#" data-program="Hoffberger">Hoffberger</a></li>
