a couple more small tweaks

--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@
                   </ul>
                   <ul data-gallery="">
                     <li><h4>Off Campus</h4></li>
-                    <li><h5><a href="http://www.micacuratorial.org/class-2014.html"  target="_blank">Curatorial Practice</a></h5></li>
-                    <li><h5 class="add-top"><a href="criticalstudies.html">Critical Studies</a></h5></li>
+                    <li><h5><a href="http://www.micacuratorial.org/class-2014.html"  target="_blank">Curatorial Practice &raquo;</a></h5></li>
+                    <li><h5 class="add-top"><a href="criticalstudies.html">Critical Studies &raquo;</a></h5></li>
                   </ul>
                 </div>
               </div>
