Comments and hide email/website if there isn't one

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                       <img src="http://mfa.cape.io/{{.}}">
                       
                       <!-- THIS IS WHERE THE CAPTIONS SHOULD PRINT OUT IF THERE ARE ANY! -->
-                      <!-- example code i'd like is down at the end of the doc, tried putting it here but it broke the site... -->
+                      <!-- example code id like is down at the end of the doc, tried putting it here but it broke the site... -->
                       <!-- /END THIS IS WHERE THE CAPTIONS SHOULD PRINT OUT IF THERE ARE ANY! -->
                       
                     </div>
