Fix program names

--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
                 <li>
                   <span>Program</span>
                   <ul class="" id="program-filter">
-                    <li><a href="#" data-program="Community Arts">Community Arts</a></li>
-                    <li><a href="criticalstudies.html" >Critical Studies</a></li>
-                    <li><a href="#" data-program="Curatorial">Curatorial</a></li>
-                    <li><a href="#" data-program="Graphic Design">Graphic Design</a></li>
-                    <li><a href="#" data-program="Hoffberger">Hoffberger</a></li>
-                    <li><a href="#" data-program="Illustration Practice">Illustration Practice</a></li>
-                    <li><a href="#" data-program="MA Teaching">MA Teaching</a></li>
-                    <li><a href="#" data-program="Mount Royal">Mount Royal</a></li>
-                    <li><a href="#" data-program="Photo & Electronic Media">Photo & Electronic Media</a></li>
-                    <li><a href="#" data-program="Post Bac FA">Post Bac FA</a></li>
-                    <li><a href="#" data-program="Post Bac GD">Post Bac GD</a></li>
-                    <li><a href="#" data-program="Rinehart">Rinehart</a></li>
-                    <li><a href="#" data-program="Social Design">Social Design</a></li> 
+                    <li><a href="#" data-program="Community Arts MFA">Community Arts MFA</a></li>
+                    <li><a href="criticalstudies.html">Critical Studies MA</a></li>
+                    <li><a href="#" data-program="Curatorial Practice MFA">Curatorial Practice MFA</a></li>
+                    <li><a href="#" data-program="Graphic Design MFA">Graphic Design MFA</a></li>
+                    <li><a href="#" data-program="Illustration Practice MFA">Illustration Practice MFA</a></li>
+                    <li><a href="#" data-program="Leroy E. Hoffberger School of Painting MFA">Leroy E. Hoffberger School of Painting MFA</a></li>
+                    <li><a href="#" data-program="Mount Royal School of Art MFA">Mount Royal School of Art MFA</a></li>
+                    <li><a href="#" data-program="Photographic & Electronic Media MFA">Photographic & Electronic Media MFA</a></li>
+                    <li><a href="#" data-program="Post-Baccalaureate Fine Art">Post-Baccalaureate Fine Arts</a></li>
+                    <li><a href="#" data-program="Post-Baccalaureate Graphic Design">Post-Baccalaureate Graphic Design</a></li>
+                    <li><a href="#" data-program="Rinehart School of Sculpture MFA">Rinehart School of Sculpture MFA</a></li>
+                    <li><a href="#" data-program="Social Design MA">Social Design MA</a></li>
+                    <li><a href="#" data-program="Teaching MA">Teaching MA</a></li>
                   </ul>
                 </li>
                 <li>
@@ -176,19 +176,19 @@
                         <a href="#">Program </a><span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" id="program-filter">
-                        <li><a href="#" data-program="Community Arts">Community Arts</a></li>
-                        <li><a href="criticalstudies.html">Critical Studies</a></li>
-                        <li><a href="#" data-program="Curatorial">Curatorial</a></li>
-                        <li><a href="#" data-program="Graphic Design">Graphic Design</a></li>
-                        <li><a href="#" data-program="Hoffberger">Hoffberger</a></li>
-                        <li><a href="#" data-program="Illustration Practice">Illustration Practice</a></li>
-                        <li><a href="#" data-program="MA Teaching">MA Teaching</a></li>
-                        <li><a href="#" data-program="Mount Royal">Mount Royal</a></li>
-                        <li><a href="#" data-program="Photo & Electronic Media">Photo & Electronic Media</a></li>
-                        <li><a href="#" data-program="Post Bac FA">Post Bac FA</a></li>
-                        <li><a href="#" data-program="Post Bac GD">Post Bac GD</a></li>
-                        <li><a href="#" data-program="Rinehart">Rinehart</a></li>
-                        <li><a href="#" data-program="Social Design">Social Design</a></li> 
+                        <li><a href="#" data-program="Community Arts MFA">Community Arts MFA</a></li>
+                        <li><a href="criticalstudies.html">Critical Studies MA</a></li>
+                        <li><a href="#" data-program="Curatorial Practice MFA">Curatorial Practice MFA</a></li>
+                        <li><a href="#" data-program="Graphic Design MFA">Graphic Design MFA</a></li>
+                        <li><a href="#" data-program="Illustration Practice MFA">Illustration Practice MFA</a></li>
+                        <li><a href="#" data-program="Leroy E. Hoffberger School of Painting MFA">Leroy E. Hoffberger School of Painting MFA</a></li>
+                        <li><a href="#" data-program="Mount Royal School of Art MFA">Mount Royal School of Art MFA</a></li>
+                        <li><a href="#" data-program="Photographic & Electronic Media MFA">Photographic &amp; Electronic Media MFA</a></li>
+                        <li><a href="#" data-program="Post-Baccalaureate Fine Art">Post-Baccalaureate Fine Arts</a></li>
+                        <li><a href="#" data-program="Post-Baccalaureate Graphic Design">Post-Baccalaureate Graphic Design</a></li>
+                        <li><a href="#" data-program="Rinehart School of Sculpture MFA">Rinehart School of Sculpture MFA</a></li>
+                        <li><a href="#" data-program="Social Design MA">Social Design MA</a></li>
+                        <li><a href="#" data-program="Teaching MA">Teaching MA</a></li>
                       </ul>
                     </div>
                   </li>
