hide teaching MA in the other menu too… oops

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <li><a href="#" data-program="Post-Baccalaureate Graphic Design">Post-Baccalaureate Graphic Design</a></li>
                         <li><a href="#" data-program="Rinehart School of Sculpture MFA">Rinehart School of Sculpture MFA</a></li>
                         <li><a href="#" data-program="Social Design MA">Social Design MA</a></li>
-                        <li><a href="#" data-program="Teaching MA">Teaching MA</a></li>
+<!--                         <li><a href="#" data-program="Teaching MA">Teaching MA</a></li> -->
                       </ul>
                     </div>
                   </li>
