Comment teaching ma

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <li><a href="#" data-program="Post-Baccalaureate Graphic Design">Post-Baccalaureate Graphic Design</a></li>
                     <li><a href="#" data-program="Rinehart School of Sculpture MFA">Rinehart School of Sculpture MFA</a></li>
                     <li><a href="#" data-program="Social Design MA">Social Design MA</a></li>
-                    <li><a href="#" data-program="Teaching MA">Teaching MA</a></li>
+                    <!-- <li><a href="#" data-program="Teaching MA">Teaching MA</a></li> -->
                   </ul>
                 </li>
                 <li>
@@ -111,7 +111,7 @@
                 <li>
                   <span>Show Date</span>
                   <ul class="" id="showdate-filter">
-                    <li><a href="#" data-showdate="Jan 24-Feb 16, 2014">Jan 24-Feb 16, 2014</a></li>
+                    <!-- <li><a href="#" data-showdate="Jan 24-Feb 16, 2014">Jan 24-Feb 16, 2014</a></li> -->
                     <li><a href="#" data-showdate="Feb 01-May 09, 2014">Feb 01-May 09, 2014</a></li>
                     <li><a href="#" data-showdate="Jan 31-Feb 16, 2014">Jan 31-Feb 16, 2014</a></li>
                     <li><a href="#" data-showdate="Mar 28-Apr 06, 2014">Mar 28-Apr 06, 2014</a></li>
@@ -188,7 +188,7 @@
                         <li><a href="#" data-program="Post-Baccalaureate Graphic Design">Post-Baccalaureate Graphic Design</a></li>
                         <li><a href="#" data-program="Rinehart School of Sculpture MFA">Rinehart School of Sculpture MFA</a></li>
                         <li><a href="#" data-program="Social Design MA">Social Design MA</a></li>
-                        <li><a href="#" data-program="Teaching MA">Teaching MA</a></li>
+                        <!-- <li><a href="#" data-program="Teaching MA">Teaching MA</a></li> -->
                       </ul>
                     </div>
                   </li>
@@ -214,7 +214,7 @@
                         <a href="#">Show Date </a><span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" id="showdate-filter">
-                        <li><a href="#" data-showdate="Jan 24-Feb 16, 2014">Jan 24-Feb 16, 2014</a></li>
+                        <!-- <li><a href="#" data-showdate="Jan 24-Feb 16, 2014">Jan 24-Feb 16, 2014</a></li> -->
                         <li><a href="#" data-showdate="Feb 01-May 09, 2014">Feb 01-May 09, 2014</a></li>
                         <li><a href="#" data-showdate="Jan 31-Feb 16, 2014">Jan 31-Feb 16, 2014</a></li>
                         <li><a href="#" data-showdate="Mar 28-Apr 06, 2014">Mar 28-Apr 06, 2014</a></li>
@@ -245,7 +245,7 @@
             <h1>Schedule of Events</h1>
             <ul>
               <!-- teaching ma -->
-              <li class="row showtime" data-showdate="Jan 24-Feb 16, 2014">
+<!--               <li class="row showtime" data-showdate="Jan 24-Feb 16, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jan 24</date>&ndash;<date>Feb 16, 2014</date></h3>
                   <p class="small red">Reception: January 24, 5-7pm</p>
@@ -253,7 +253,7 @@
                 <div class="col-sm-8">
                   <p class="lead">Teaching MA</p>
                 </div>
-              </li>
+              </li> -->
               <!-- post-bacc fine art -->
               <li class="row showtime" data-showdate="Jan 31-Feb 16, 2014">
                 <div class="col-sm-4 text-right">
