--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <li><a href="#" data-gallery="Fox">Fox 3</a></li>
                     <li><a href="#" data-gallery="Meyerhoff">Meyerhoff Gallery</a></li>
                     <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
-                    <li><a href="#" data-gallery="Riggs">Studio Center Galleries</a></li>
+                    <li><a href="#" data-gallery="Studio Center Galleries">Studio Center Galleries</a></li>
                     <li><a href="#" data-gallery="Off Campus">Off Campus</a></li> <!-- this needs to be the curatorial practice students, can it somehow use the program data from above? -->
                   </ul>
                 </li>
@@ -202,7 +202,7 @@
                         <li><a href="#" data-gallery="Fox">Fox 3</a></li>
                         <li><a href="#" data-gallery="Meyerhoff">Meyerhoff Gallery</a></li>
                         <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
-                        <li><a href="#" data-gallery="Riggs,Leidy">Studio Center Galleries</a></li>
+                        <li><a href="#" data-gallery="Studio Center Galleries">Studio Center Galleries</a></li>
                         <li><a href="#" data-gallery="Off Campus">Off Campus</a></li>
                       </ul>
                     </div>
@@ -384,7 +384,7 @@
                     <li><p>1303 W. Mt. Royal Ave. <br/>Baltimore, MD 21217</p></li>
                     <li><p><a target="_blank" href="https://www.google.com/maps/place/Decker+and+Meyerhoff+Galleries/@39.3080133,-76.621262,18z/data=!4m2!3m1!1s0x0:0x6e7b0c3da90d8dd1">Get Directions</a></p></li>
                   </ul>
-                  <ul data-gallery="Riggs,Leidy">
+                  <ul data-gallery="Studio Center Galleries">
                     <li><h4><span class="black">3&nbsp;</span> Studio Center</h4></li>
                     <li><h5>Riggs Gallery</h5></li>
                     <li><h5>Leidy Gallery</h5></li>
