Updated with Gywnne's edited lead text

--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
           <article id="intro">
             <div class="row">
               <div class="col-sm-12 col-md-10">
-                <p class="lead">The Graduate Spring/Summer Exhibition Season 2014 presents work to the MICA community and the public from January 24 &ndash; May 4th and resumes June 26 &ndash; July 12. The season includes MFA, MA and Post-Baccalaureate Fine Art and Graphic Design exhibitions and critiques, gallery talks and presentations, public programs, and symposium, and student curated installations throughout the city.</p>
-                <p class="lead">The Graduate Exhibition Season showcases the creative achievements of MICA&rsquo;s Graduate Programs&mdash;a diverse group of artists, designers, scholars, and curators. It offers the campus community and the general public opportunities to experience and engage with the creative process at MICA.</p>
+                <p class="lead">The Graduate Exhibition Season 2014 presents work to the MICA community and the public from January 24 &ndash; May 4th and resumes June 26 &ndash; July 12. The season includes MFA, MA and post-baccalaureate exhibitions and critiques, gallery talks and presentations, public programs, a symposium, and student curated installations throughout the city.</p>
+                <p class="lead">The Graduate Exhibition Season showcases the achievements of MICA&rsquo;s graduate students&mdash;a diverse group of artists, designers, educators, scholars, and curators. It offers the campus community and the general public opportunities to engage with and contribute to the creative process at MICA.</p>
               </div>
             </div>
           </article>
