does this make the caption area awesome?

--- a/index.html
+++ b/index.html
@@ -509,7 +509,11 @@
 
                       <div class="carousel-caption">
                         {{#caption}}
-                        <h4>{{title}}</h4>
+                        <div class="inner">
+                          <div class="info">
+                            <h4>{{title}}</h4>
+                          </div>
+                        </div>
                         {{/caption}}
                       </div>
                       
