show teaching MA but disable showdate scroll and filter?

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <h1>Schedule of Events</h1>
             <ul>
               <!-- teaching ma -->
-<!--               <li class="row showtime" data-showdate="Jan 24-Feb 16, 2014">
+              <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jan 24</date>&ndash;<date>Feb 16, 2014</date></h3>
                   <p class="small red">Reception: January 24, 5-7pm</p>
@@ -252,7 +252,7 @@
                 <div class="col-sm-8">
                   <p class="lead">Teaching MA</p>
                 </div>
-              </li> -->
+              </li>
               <!-- post-bacc fine art -->
               <li class="row showtime" data-showdate="Jan 31-Feb 16, 2014">
                 <div class="col-sm-4 text-right">
