--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <h1>Schedule of Events</h1>
             <ul>
               <!-- teaching ma -->
-              <li class="row showtime">
+              <li class="row showtime" data-showdate="Jan 24-Feb 16, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jan 24</date>&ndash;<date>Feb 16, 2014</date></h3>
                   <p class="small red">Reception: January 24, 5-7pm</p>
@@ -254,7 +254,7 @@
                 </div>
               </li>
               <!-- post-bacc fine art -->
-              <li class="row showtime" data-showdate="Jan 31-Feb 16, 2014">
+              <li class="row showtime active" data-showdate="Jan 31-Feb 16, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jan 31</date>&ndash;<date>Feb 16, 2014</date></h3>
                   <p class="small red">Reception: January 31, 5-7pm</p>
@@ -276,7 +276,7 @@
               </li>
 
               <!-- -->
-              <li class="row showtime" data-showdate="Mar 28-Apr 06, 2014">
+              <li class="row showtime active" data-showdate="Mar 28-Apr 06, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Mar 28</date>&ndash;<date>Apr 06, 2014</date></h3>
                   <p class="small red">Reception: March 28, 5&ndash;8pm</p>
@@ -289,7 +289,7 @@
               </li>
 
               <!-- -->
-              <li class="row showtime" data-showdate="Apr 11-Apr 20, 2014">
+              <li class="row showtime active" data-showdate="Apr 11-Apr 20, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 11</date>&ndash;<date>Apr 20, 2014</date></h3>
                   <p class="small red">Reception: April 11, 5&ndash;8pm</p>
@@ -302,7 +302,7 @@
               </li>
 
               <!-- -->
-              <li class="row showtime" data-showdate="Apr 23-May 04, 2014">
+              <li class="row showtime active" data-showdate="Apr 23-May 04, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 23</date>&ndash;<date>May 04, 2014</date></h3>
                   <p class="small red">Reception: May 02, 5&ndash;8pm</p>
@@ -313,7 +313,7 @@
               </li>
 
               <!-- -->
-              <li class="row showtime" data-showdate="Apr 25-May 04, 2014">
+              <li class="row showtime active" data-showdate="Apr 25-May 04, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 25</date>&ndash;<date>May 04, 2014</date></h3>
                   <p class="small red">Reception: May 02, 5&ndash;8pm</p>
