adding gallery everywhere

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
                 <li>
                   <span>Gallery</span>
                   <ul class="" id="gallery-filter">
-                    <li><a href="#" data-gallery="D center">D Center</a></li>
-                    <li><a href="#" data-gallery="Decker">Decker</a></li>
-                    <li><a href="#" data-gallery="Fox">Fox 3</a></li>
+                    <li><a href="#" data-gallery="D center">D Center Gallery</a></li>
+                    <li><a href="#" data-gallery="Decker">Decker Gallery</a></li>
+                    <li><a href="#" data-gallery="Fox">Fox 3 Gallery</a></li>
                     <li><a href="#" data-gallery="Meyerhoff">Meyerhoff Gallery</a></li>
-                    <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
+                    <li><a href="#" data-gallery="Pinkard">Pinkard Gallery</a></li>
                     <li><a href="#" data-gallery="Studio Center Galleries">Studio Center Galleries</a></li>
-                    <li><a href="#" data-gallery="Off Campus">Off Campus</a></li> <!-- this needs to be the curatorial practice students, can it somehow use the program data from above? -->
+                    <li><a href="#" data-gallery="Off Campus">Off Campus</a></li>
                   </ul>
                 </li>
                 <li>
@@ -117,7 +117,7 @@
                     <li><a href="#" data-showdate="Apr 11-Apr 20, 2014">Apr 11-Apr 20, 2014</a></li>
                     <li><a href="#" data-showdate="Apr 23-May 04, 2014">Apr 23-May 04, 2014</a></li>
                     <li><a href="#" data-showdate="Apr 25-May 04, 2014">Apr 25-May 04, 2014</a></li>
-                    <li><a href="#" data-showdate="May 03, 2014">May 03, 2014</a></li>
+                    <li><a href="criticalstudies.html">May 03, 2014</a></li>
                   </ul>
                 </li>
               </ul>
@@ -197,11 +197,11 @@
                         <a href="#">Gallery </a><span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" id="gallery-filter">
-                        <li><a href="#" data-gallery="D center">D Center</a></li>
-                        <li><a href="#" data-gallery="Decker">Decker</a></li>
-                        <li><a href="#" data-gallery="Fox">Fox 3</a></li>
+                        <li><a href="#" data-gallery="D center">D Center Gallery</a></li>
+                        <li><a href="#" data-gallery="Decker">Decker Gallery</a></li>
+                        <li><a href="#" data-gallery="Fox">Fox 3 Gallery</a></li>
                         <li><a href="#" data-gallery="Meyerhoff">Meyerhoff Gallery</a></li>
-                        <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
+                        <li><a href="#" data-gallery="Pinkard">Pinkard Gallery</a></li>
                         <li><a href="#" data-gallery="Studio Center Galleries">Studio Center Galleries</a></li>
                         <li><a href="#" data-gallery="Off Campus">Off Campus</a></li>
                       </ul>
@@ -220,7 +220,7 @@
                         <li><a href="#" data-showdate="Apr 11-Apr 20, 2014">Apr 11-Apr 20, 2014</a></li>
                         <li><a href="#" data-showdate="Apr 23-May 04, 2014">Apr 23-May 04, 2014</a></li>
                         <li><a href="#" data-showdate="Apr 25-May 04, 2014">Apr 25-May 04, 2014</a></li>
-                        <li><a href="#" data-showdate="May 03, 2014">May 03, 2014</a></li>
+                        <li><a href="criticalstudies.html">May 03, 2014</a></li>
                       </ul>
                     </div>
                   </li>
