Fix single image issue

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                 {{^slideshowsingle}}
                 {{#slideshow}}
                 <div id="singleimg">
-                  <img src="http://mfa.cape.io/{{.}}">
+                  <img src="http://mfa.cape.io/{{slide}}">
                   {{#caption}}
                   <div class="carousel-caption">
                     <div class="inner">
