--- a/criticalstudies.html
+++ b/criticalstudies.html
@@ -24,7 +24,6 @@ P    X          F                K       J              F      J     Y      5   
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/mfa2014.css" rel="stylesheet">
-    <link href="css/kbadd.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -46,7 +45,7 @@ P    X          F                K       J              F      J     Y      5   
     <div class="student-overlay">
       <main class="container">
   
-        <button type="button" class="close"><a href="/">&times;</a></button>
+        <button type="button" class="close"><a href="/">&times;</a></button> <!-- shit... need this to take you back to homepage... -->
   
         <div class="container">
           
@@ -61,7 +60,7 @@ P    X          F                K       J              F      J     Y      5   
                 <h2>Thesis Symposium</h2>
         
                 <ul>
-                  <li>At the <a href="https://www.google.com/maps/dir//Walters+Art+Museum,+600+N+Charles+St,+Baltimore,+MD+21201/@39.2965947,-76.6161201,17z/data=!4m13!1m4!3m3!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2sWalters+Art+Museum!3b1!4m7!1m0!1m5!1m1!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2m2!1d-76.61612!2d39.296595" target="_blank">Walters Art Museum</a></li>
+                  <li><p>At the <a href="https://www.google.com/maps/dir//Walters+Art+Museum,+600+N+Charles+St,+Baltimore,+MD+21201/@39.2965947,-76.6161201,17z/data=!4m13!1m4!3m3!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2sWalters+Art+Museum!3b1!4m7!1m0!1m5!1m1!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2m2!1d-76.61612!2d39.296595" target="_blank">Walters Art Museum</a></p></li>
                   <li><date>May 3</date></li>
                   <li><time>5&ndash;7pm</time></li>
                 </ul>
