--- a/index.html
+++ b/index.html
@@ -566,9 +566,7 @@ P    X          F                K       J              F      J     Y      5   
                     <div class="inner">
                       <div class="info">
                         <h4 class="title">{{title}}</h4>
-                        <p class="year">{{year}}</p>
-                        <p class="medium">{{medium}}</p>
-                        <p class="size">{{size}}</p>
+                        <p class="year">{{year}},{{medium}},{{size}}</p>
                         <p class="credit">{{credit}}</p>
                       </div>
                     </div>
