Use _id instead of id

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                       <p class="program">{{program}}</p>
                       <p class="exhibitionlocation">{{exhibitionlocation}}</p>
                       <p class="show-date showdate">{{showdate}}</p>
-                      <p class="id" style="display:none">{{id}}</p>
+                      <p class="id" style="display:none">{{_id}}</p>
 <!--                       <p class="studentid">{{_id}}</p> -->
                     </div>
                   </div>
